--- a/friendList/src/main/resources/templates/friendlist.html
+++ b/friendList/src/main/resources/templates/friendlist.html
@@ -1,31 +1,39 @@
-<! DOCTYPE HMTL>
+<!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-	<title>Friend List</title>
-	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <title>Getting Started: Handling Form Submission</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
+	
+	
 	<h1>My friends</h1>
+	<!-- This version only supports 1 friend
 	<ul>
-			<li>				
-				<td th:text="${friend.name}">1</td>
-			</li>
-<!--		<tr th:each="friend : ${friends}">
-			<li>				
-				<td th:text="${friend.name}">1</td>
-			</li>
-		</tr>-->
+		<li>
+			<p th:text="${friend.name}" />			
+		</li>
 	</ul>
-	<br />
+	-->
+
+	<ul>		
+		<tr th:each="friend: ${friends}">
+			<td th:text="${friend.name}" /></td>
+		</tr>
+	</ul>
+
+	
 	<h1>Add new friend to list</h1>
-	<form action="#" th:action="@{/index}" th:object="${friend.name}" method="post">
-		<p>Name: <input type="text" th:field="*{friend.name}" /></p>
-		<p><input type="submit" value="Submit" /></p>
-	</form>
-<!--	<form action="#" th:action="@{/index}" th:object="${msg}" method="post">
-		<p>Name: <input type="text" th:field="*{msg}" /></p>
-		<p><input type="submit" value="Submit" /></p>
-	</form>-->
+    <form action="#" th:action="@{/index}" th:object="${name}" method="post">
+    	<table>
+        <tr>
+        	<td>Name: <input type="text" th:field="*{name}" /></td>
+        	
+        </table>
+        <p><input type="submit" value="Submit" /></p>
+    </form>
+    
+    
 </body>
-</hmtl>
+</html>
 
